--- a/style.css
+++ b/style.css
@@ -38,14 +38,15 @@ body {
   height: 50px;
 }
 .fruit {
-  width: 20px;
-  height: 20px;
+  width: 40px;
+  height: 40px;
   position: absolute;
   display: inline-block;
-  border-radius: 50%;
-  background-color: red;
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat;
   bottom: 475px;
-  z-index: 0;
+  z-index: 4;
   animation-name: fruit;
   animation-duration: 5s;
   animation-iteration-count: 1;
