--- a/style.css
+++ b/style.css
@@ -39,6 +39,7 @@ body {
 .basket img {
   width: 50px;
   height: 50px;
+  visibility: hidden;
 }
 .fruit {
   width: 40px;
@@ -82,7 +83,7 @@ object {
   height: 0%;
 }
 input {
-  width: 200px;
+  width: 250px;
   display: block;
   position: relative;
   margin: 0 auto;
